[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/pexeso.png" type="Texture" id=1]
[ext_resource path="res://mini-games/pairs/Pairs2.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Signika-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://mini-games/pairs/Card.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/bgs/TTCBG.png" type="Texture" id=5]
[ext_resource path="res://mini-games/explanation/explanation.tscn" type="PackedScene" id=6]
[ext_resource path="res://mini-games/results/results.tscn" type="PackedScene" id=7]
[ext_resource path="res://navigation/in-game-menu/InGameMenu.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.396078, 0.572549, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.988235, 0.380392, 0.380392, 0 )

[sub_resource type="DynamicFont" id=5]
size = 100
outline_size = 2
outline_color = Color( 0.0196078, 0.568627, 0.682353, 1 )
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 20, 300, 300 )

[node name="PexesoUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 44.0
margin_top = 44.0
margin_right = -44.0
margin_bottom = -44.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_right = 992.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_styles/separator = SubResource( 4 )

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
visible = false
margin_top = 54.0
margin_right = 992.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 200.0
step = 1.0
value = 200.0
percent_visible = false

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 992.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 10 )
custom_styles/separator = SubResource( 4 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 992.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0.482353, 0.803922, 0.870588, 1 )
custom_colors/font_color_shadow = Color( 0.00392157, 0.239216, 0.427451, 1 )
custom_fonts/font = SubResource( 5 )
text = "Nájdi páry"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 196.0
margin_right = 992.0
margin_bottom = 1658.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Card" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 328.0
margin_bottom = 363.0

[node name="Card2" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 332.0
margin_right = 660.0
margin_bottom = 363.0

[node name="Card3" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 664.0
margin_right = 992.0
margin_bottom = 363.0

[node name="Card4" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 367.0
margin_right = 328.0
margin_bottom = 730.0

[node name="Card5" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 332.0
margin_top = 367.0
margin_right = 660.0
margin_bottom = 730.0

[node name="Card6" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 664.0
margin_top = 367.0
margin_right = 992.0
margin_bottom = 730.0

[node name="Card7" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 734.0
margin_right = 328.0
margin_bottom = 1096.0

[node name="Card8" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 332.0
margin_top = 734.0
margin_right = 660.0
margin_bottom = 1096.0

[node name="Card9" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 664.0
margin_top = 734.0
margin_right = 992.0
margin_bottom = 1096.0

[node name="Card10" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1100.0
margin_right = 328.0
margin_bottom = 1462.0

[node name="Card11" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 332.0
margin_top = 1100.0
margin_right = 660.0
margin_bottom = 1462.0

[node name="Card12" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 664.0
margin_top = 1100.0
margin_right = 992.0
margin_bottom = 1462.0

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 1662.0
margin_right = 992.0
margin_bottom = 1832.0
rect_min_size = Vector2( 0, 170 )
custom_styles/separator = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="UnflipTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
margin_left = 390.0
margin_top = 810.0
margin_right = 690.0
margin_bottom = 1110.0
texture = SubResource( 3 )

[node name="Tween2" type="Tween" parent="."]

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
margin_left = 161.0
margin_top = 108.0
margin_right = 411.0
margin_bottom = 358.0
rect_min_size = Vector2( 250, 250 )
rect_pivot_offset = Vector2( 125, 0 )
texture = ExtResource( 1 )
expand = true

[node name="InGameMenu" parent="." instance=ExtResource( 8 )]

[node name="Explanation" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Results" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="UnflipTimer" to="." method="_on_UnflipTimer_timeout"]
[connection signal="tween_all_completed" from="Tween2" to="." method="_on_Tween2_tween_all_completed"]
[connection signal="gui_input" from="TextureRect2" to="." method="_on_TextureRect_gui_input"]
